feat: add student register endpoint
